upd: Spanish translations
Remaining translations completed and minor fixes to improve consistency and legibility.

--- a/po/es.po
+++ b/po/es.po
@@ -1,10 +1,9 @@
-
 msgid ""
 msgstr ""
-"Project-Id-Version:  Nala\n"
+"Project-Id-Version: Nala\n"
 "Report-Msgid-Bugs-To: https://gitlab.com/volian/nala/-/issues\n"
 "POT-Creation-Date: 2023-10-09 21:11-0500\n"
-"PO-Revision-Date: 2022-09-04 13:15-0600\n"
+"PO-Revision-Date: 2023-10-22 21:55-0600\n"
 "Last-Translator: Andrés Rodríguez <andres@mailoo.org>\n"
 "Language: es\n"
 "Language-Team: es <LL@li.org>\n"
@@ -13,6 +12,7 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.3.2\n"
 
 #. Answers for the Question prompt "[Y/n]"
 #: nala/utils.py:65
@@ -32,13 +32,12 @@ msgstr ""
 "¿Quiso decir {correction}?"
 
 #: nala/utils.py:345
-#, fuzzy
 msgid "{error} Some packages are unable to be authenticated. Use '-o APT::Get::AllowUnauthenticated=true' with `--yes`"
-msgstr "{error} Algunos paquetes no pudieron ser autenticados"
+msgstr "{error} Algunos paquetes no pudieron ser autenticados. Use '-o APT::Get::AllowUnauthenticated=true' with `--yes`"
 
 #: nala/utils.py:360
 msgid "{error} failed regex compilation '{error_msg} at position {position}'"
-msgstr "{error} falló la compilación de expresiones regulares '{error_msg} en la posición {position}'"
+msgstr "{error} falló la compilación de la expresión regular '{error_msg} en la posición {position}'"
 
 #: nala/utils.py:371
 msgid "{error} Nala needs root to fix broken packages"
@@ -46,7 +45,7 @@ msgstr "{error} Nala requiere acceso de root para reparar paquetes rotos"
 
 #: nala/utils.py:376
 msgid "{error} Nala needs root to {command}"
-msgstr "{error} Nala requiere acceso de root para {command}"
+msgstr "{error} Nala requiere acceso de root para ejecutar {command}"
 
 #: nala/utils.py:399
 msgid "{error} Nala is already running another instance {last_pid}"
@@ -90,7 +89,7 @@ msgstr "Actualizar la lista de paquetes y el sistema."
 
 #: nala/nala.py:339
 msgid "Would you like us to protect these and try again?"
-msgstr "¿Quiere que protejamos estos e intentarlo de nuevo?"
+msgstr "¿Quiere que los protejamos e intentarlo de nuevo?"
 
 #: nala/error.py:581 nala/install.py:233 nala/nala.py:344
 msgid "{error} You have held broken packages"
@@ -146,7 +145,7 @@ msgstr "Expresión regular o palabra a buscar"
 
 #: nala/nala.py:570
 msgid "{error} {regex} not found."
-msgstr "{error} {regex} no encontrado."
+msgstr "{error} {regex} no se encontró."
 
 #: nala/nala.py:577
 msgid "List packages based on package names."
@@ -194,11 +193,11 @@ msgstr "No puedo mugir porque soy un gato"
 
 #: nala/nala.py:679
 msgid "What did you expect to update?"
-msgstr "¿Qué es lo que esperabas actualizar?"
+msgstr "¿Qué es lo que esperaba actualizar?"
 
 #: nala/nala.py:683
 msgid "What did you expect no-update to do?"
-msgstr "¿Qué esperabas que hiciera el no actualizar?"
+msgstr "¿Qué esperaba que hiciera el no actualizar?"
 
 #: nala/install.py:127
 msgid "Purging configuration files for {package}"
@@ -206,7 +205,7 @@ msgstr "Purgando archivos de configuración para {package}"
 
 #: nala/install.py:207
 msgid "{notice} Selected packages cannot be excluded from upgrade safely."
-msgstr "{notice} Los paquetes seleccionados no pueden ser excluidos de la actualización de forma segura."
+msgstr "{notice} Los paquetes seleccionados no pueden excluirse de forma segura de la actualización."
 
 #: nala/install.py:229
 msgid "{error} Unable to calculate how to protect the selected packages"
@@ -214,7 +213,7 @@ msgstr "{error} No se pudo calcular cómo proteger los paquetes seleccionados"
 
 #: nala/install.py:235
 msgid "{notice} The following packages need to be protected as well:"
-msgstr "{notice} Los siguientes paquetes también deben ser protegidos:"
+msgstr "{notice} Los siguientes paquetes también necesitan ser protegidos:"
 
 #: nala/install.py:290
 msgid "{error} The following hook arguments are invalid: {args}"
@@ -269,11 +268,12 @@ msgid ""
 "{error} No content length in response from {url}\n"
 "  Ensure the URL points to a Debian Package"
 msgstr ""
+"{error} Sin longitud de contenido en respuesta desde {url}\n"
+"  Asegúrese de que la URL apunte a un paquete Debian"
 
 #: nala/install.py:650
-#, fuzzy
 msgid "{notice} {filename} can't be hashsum verified."
-msgstr "{error} No se pudo verificar la integridad de {filename}."
+msgstr "{notice} No se pudo verificar la suma hash de {filename}."
 
 #: nala/install.py:655 nala/install.py:1115
 msgid "Do you want to continue?"
@@ -285,16 +285,15 @@ msgstr "Abortar."
 
 #: nala/install.py:699
 msgid "{error} Hash does not match the '{hash_type}' Length"
-msgstr ""
+msgstr "{error} El hash no coincide con la longitud de '{hash_type}'"
 
 #: nala/install.py:706
 msgid "{error} Hash Type '{hash_type}' specified with no hash"
-msgstr ""
+msgstr "{error} El tipo de hash '{hash_type}' fue especificado sin hash"
 
 #: nala/install.py:713
-#, fuzzy
 msgid "{error} Hash Type '{hash_type}' is unsupported"
-msgstr "{error} {distro} {release} no está soportada."
+msgstr "{error} El tipo de hash '{hash_type}' es incompatible"
 
 #: nala/install.py:858
 msgid "{error} Version {version} not found for package {package}"
@@ -466,7 +465,7 @@ msgstr "{error} {package} no tiene candidato para la instalación."
 
 #: nala/error.py:197 nala/show.py:331
 msgid "{error} {package} not found"
-msgstr "{error} {package} no encontrado"
+msgstr "{error} {package} no se encontró"
 
 #: nala/error.py:231
 msgid ""
@@ -505,7 +504,6 @@ msgid "{package} but the cache version is {version}"
 msgstr "{package} pero la versión en caché es {version}"
 
 #: nala/error.py:405
-#, fuzzy
 msgid "{package} but it cannot be installed"
 msgstr "{package} pero no puede ser instalado"
 
@@ -604,11 +602,11 @@ msgstr "Sugerido, no se instalará"
 
 #: nala/summary.py:249 nala/summary.py:267
 msgid "Kept Back, Will Not Be Upgraded"
-msgstr ""
+msgstr "Retenido, no se actualizará"
 
 #: nala/summary.py:249 nala/summary.py:267
 msgid "Kept Back"
-msgstr ""
+msgstr "Retenido"
 
 #: nala/summary.py:251
 msgid "Auto-Removable, Will Not Be Removed"
@@ -647,7 +645,7 @@ msgid ""
 "\n"
 "For Ubuntu https://launchpad.net/ubuntu/+archivemirrors-rss"
 msgstr ""
-"Nala buscará los servidores espejo con la latencia más baja.\n"
+"Nala obtendrá los servidores espejo con la latencia más baja.\n"
 "\n"
 "Para Debian https://mirror-master.debian.org/status/Mirrors.masterlist\n"
 "\n"
@@ -658,9 +656,8 @@ msgid "Are these mirrors okay?"
 msgstr "¿Están bien estos servidores espejo?"
 
 #: nala/fetch.py:303
-#, fuzzy
 msgid "Mirrors you want to keep, separated by space or comma {selection}:"
-msgstr "Los servidores espejo que desea mantener, separados por espacios {selection}:"
+msgstr "Los servidores espejo que desea mantener, separados por espacios o comas {selection}:"
 
 #: nala/fetch.py:325
 msgid "{error} Index {index} doesn't exist."
@@ -668,11 +665,11 @@ msgstr "{error} El índice {index} no existe."
 
 #: nala/fetch.py:335
 msgid "{error} {value_error}"
-msgstr ""
+msgstr "{error} {value_error}"
 
 #: nala/fetch.py:345
 msgid "{error} Parser: {parser}"
-msgstr ""
+msgstr "{error} Parser: {parser}"
 
 #: nala/fetch.py:376
 msgid "Fetching {distro} mirrors"
@@ -708,7 +705,7 @@ msgstr "{error} Hubo un problema al detectar la versión."
 
 #: nala/fetch.py:802
 msgid "{error} {distro} {release} is unsupported."
-msgstr "{error} {distro} {release} no está soportada."
+msgstr "{error} {distro} {release} es incompatible."
 
 #: nala/fetch.py:806
 msgid "You can specify Ubuntu or Debian manually."
@@ -756,7 +753,7 @@ msgstr "Agregar los repositorios contrib y non-free."
 
 #: nala/fetch.py:860
 msgid "Run fetch uninteractively. Will still prompt for overwrite."
-msgstr "Ejecutar fetch de forma no interactiva. Seguirá preguntando para sobrescribir."
+msgstr "Ejecutar fetch de forma no interactiva. Aún preguntará para sobrescribir."
 
 #: nala/fetch.py:869
 msgid "Choose only mirrors of a specific ISO country code."
@@ -939,7 +936,7 @@ msgstr "{notice} No se puede leer el archivo de configuración: {filename}. Usan
 
 #: nala/options.py:72
 msgid "{error} Config key '{key}' should be a bool not {value}"
-msgstr "{error} La clave de configuración '{key}' debe ser un valor booleano no {value}"
+msgstr "{error} La clave de configuración '{key}' debe ser un valor booleano, no {value}"
 
 #: nala/options.py:340
 msgid "{error} Option {option}: Configuration item must have a '='"
@@ -951,7 +948,7 @@ msgid ""
 "The full GPLv3 can be found at:\n"
 "https://www.gnu.org/licenses/gpl-3.0.txt"
 msgstr ""
-"Parece que el sistema no tiene un archivo de licencia\n"
+"Parece que el sistema no tiene el archivo de licencia\n"
 "La GPLv3 completa se puede encontrar en:\n"
 "https://www.gnu.org/licenses/gpl-3.0.txt"
 
@@ -985,7 +982,7 @@ msgstr "Alternar la instalación de paquetes sugeridos."
 
 #: nala/options.py:470
 msgid "Set the default release to install packages from."
-msgstr ""
+msgstr "Establecer la versión predeterminada desde la que instalar los paquetes."
 
 #: nala/options.py:477
 msgid "Toggle full-upgrade"
@@ -997,7 +994,7 @@ msgstr "Alternar la actualización de la lista de paquetes."
 
 #: nala/options.py:490
 msgid "Toggle a more condensed transaction summary."
-msgstr ""
+msgstr "Alternar un resumen de transacciones más condensado."
 
 #: nala/options.py:498
 msgid "Purge any packages that would be removed."
@@ -1037,7 +1034,7 @@ msgstr "Mostrar todas las arquitecturas de un paquete."
 
 #: nala/options.py:574
 msgid "Packages are only retrieved, not unpacked or installed."
-msgstr "Los paquetes solo se recuperan, no se desempaquetan ni instalan."
+msgstr "Los paquetes solo se recuperan, no se desempaquetan ni se instalan."
 
 #: nala/options.py:583
 msgid "Search only package names."
@@ -1073,7 +1070,7 @@ msgstr "Eliminar `nala-sources.list`."
 
 #: nala/options.py:650
 msgid "Run fetch uninteractively. Will still prompt for overwrite"
-msgstr "Ejecutar fetch de forma no interactiva. Seguirá preguntando para sobrescribir"
+msgstr "Ejecutar fetch de forma no interactiva. Aún preguntará para sobrescribir"
 
 #: nala/options.py:659
 msgid "Show this message and exit."
@@ -1081,7 +1078,7 @@ msgstr "Mostrar este mensaje y salir."
 
 #: nala/history.py:85
 msgid "{error} '{command}' for operations other than install or remove are not currently supported"
-msgstr "{error} '{command}' actualmente no tiene soporte para operaciones que no sean instalar o desinstalar"
+msgstr "{error} '{command}' actualmente no es compatible con operaciones distintas a instalar o desinstalar"
 
 #: nala/history.py:89
 msgid ""
@@ -1212,9 +1209,8 @@ msgid "{last_completed} {package}"
 msgstr "{last_completed} {package}"
 
 #: nala/downloader.py:108
-#, fuzzy
 msgid "{notice} Nala has removed {filename}"
-msgstr "{notice} Nala eliminó {filename} pero intentará con otro servidor espejo"
+msgstr "{notice} Nala ha eliminado {filename}"
 
 #: nala/downloader.py:109
 msgid "{error} Failed to move archive file, {str_err}: '{file1}' -> '{file2}'"
@@ -1230,7 +1226,7 @@ msgid ""
 "  Expected Hash: {expected}\n"
 "  Received Hash: {received}"
 msgstr ""
-"{error} La suma de verificación no coincide: {filename}\n"
+"{error} La suma hash no coincide: {filename}\n"
 "  Hash esperado: {expected}\n"
 "  Hash recibido: {received}"
 
@@ -1249,6 +1245,8 @@ msgid ""
 "{error} Improper Hash Syntax\n"
 "  Try '{url}:sha256:510b0c4f8fc3e7bd7182b53c0b81c1a113bea9fd3c18219eac0e18e601dc8d17'"
 msgstr ""
+"{error} Sintaxis hash incorrecta\n"
+"  Intente '{url}:sha256:510b0c4f8fc3e7bd7182b53c0b81c1a113bea9fd3c18219eac0e18e601dc8d17'"
 
 #: nala/downloader.py:298
 msgid "Exiting due to {signal}"
@@ -1271,9 +1269,8 @@ msgid "{error} No more mirrors available for {filename}"
 msgstr "{error} No hay más servidores espejo disponibles para {filename}"
 
 #: nala/downloader.py:527
-#, fuzzy
 msgid "{notice} Trying next url: {url}"
-msgstr "Probando la siguiente url: {url}"
+msgstr "{notice} Probando la siguiente url: {url}"
 
 #: nala/downloader.py:536
 msgid "{warning} The following packages cannot be authenticated!"
