fix: wrong key in translations

--- a/po/tr.po
+++ b/po/tr.po
@@ -273,7 +273,7 @@ msgstr ""
 #: nala/install.py:650
 #, fuzzy
 msgid "{notice} {filename} can't be hashsum verified."
-msgstr "{error} {filename} bütünlük açısından kontrol edilemiyor."
+msgstr "{notice} {filename} bütünlük açısından kontrol edilemiyor."
 
 #: nala/install.py:655 nala/install.py:1115
 msgid "Do you want to continue?"
