--- a/po/de.po
+++ b/po/de.po
@@ -275,7 +275,7 @@ msgstr ""
 #: nala/install.py:650
 #, fuzzy
 msgid "{notice} {filename} can't be hashsum verified."
-msgstr "{error} {filename} kann nicht auf Integrität überprüft werden."
+msgstr "{notice} {filename} kann nicht auf Integrität überprüft werden."
 
 #: nala/install.py:655 nala/install.py:1115
 msgid "Do you want to continue?"
