--- a/po/pl.po
+++ b/po/pl.po
@@ -271,7 +271,7 @@ msgstr ""
 #: nala/install.py:650
 #, fuzzy
 msgid "{notice} {filename} can't be hashsum verified."
-msgstr "{error} Nie można sprawdzić integralności pliku {filename}."
+msgstr "{notice} Nie można sprawdzić integralności pliku {filename}."
 
 #: nala/install.py:655 nala/install.py:1115
 msgid "Do you want to continue?"
