--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -281,7 +281,7 @@ msgstr ""
 #: nala/install.py:650
 #, fuzzy
 msgid "{notice} {filename} can't be hashsum verified."
-msgstr "Ocorreu o erro {error}, não pôde ser verificado à integridade do arquivo {filename}."
+msgstr "{notice} não pôde ser verificado à integridade do arquivo {filename}"
 
 #: nala/install.py:655 nala/install.py:1115
 msgid "Do you want to continue?"
